substrate/primitives/api/test/tests/ui/deprecation_info.stderr
error: Invalid deprecation attribute: missing `note`
               help: the following are the possible correct uses
       |
       |     #[deprecated = "reason"]
       |
       |     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
       |
       |     #[deprecated]
       |
  --> tests/ui/deprecation_info.rs:20:3
   |
20 |         #[deprecated(unknown_kw = "test")]
   |         ^
